--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -12,8 +13,12 @@
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "express-winston": "^0.2.9",
+    "json": "^11.0.0",
     "lodash": "^2.4.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
     "serve-favicon": "~2.1.3",
+    "urlencode": "^2.0.0",
     "winston": "^0.8.3"
   }
 }
